naver-rs-scraper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-naver-rs-scraper-deploy-naver-rs-scraper
  name: deploy-naver-rs-scraper
  namespace: naver-rs-scraper
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      namespace: naver-rs-scraper
    spec:
      affinity: {}
      containers:
        - image: 172.10.30.11:5000/naver-rs-scraper/scraper_trade_rs_stream:v0.5
          imagePullPolicy: Always
          name: container-0
          ports:
            - containerPort: 8501
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
