naver-rs-scraper/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: naver-rs-scraper
  namespace: naver-rs-scraper
spec:
  hosts:
  - naver-rs-scraper.apps.lab3.dslee.lab
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri: { prefix: "/" }
    route:
    - destination:
        host: svc-naver-rs-scraper.naver-rs-scraper.svc.cluster.local
        port: { number: 8501 }
